--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-runpod==1.3.2
-opencv-python-headless==4.10.0.84
-mediapipe==0.10.14
-numpy==1.26.4
+# Core
+numpy>=1.24
+opencv-python-headless>=4.9
+
+# Pose & face (CPU-only)
+mediapipe>=0.10.11
+protobuf>=3.20.3,<5.0.0
+
+# Serverless entry / local runner
+runpod>=1.3.1
+
+# Utils
+Pillow>=10.0.0
